# news-agent

./: README.md  pyproject.toml
app/: qa_test_results.json  test.py
app/api/: app.py
app/core/: config.py  memory.py  rag.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App copy.tsx  App.tsx  index.css  index.tsx
